# data-cleaning-openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.sh  api.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
env/: __init__.py  actions.py  ai_grader.py  environment.py  grader.py  models.py  schemas.py  tasks.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: PipelineStepper.tsx  RewardChart.tsx
frontend/src/lib/: api.ts
sample_data/: customers.csv  employees.csv  products.csv
server/: app.py
