[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-openenv"
version = "0.1.0"
description = "Data cleaning open environment for Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "google-generativeai",
    "openai"
]

[project.scripts]
server = "server.app:app"
